--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "@angular/platform-browser": "2.4.2",
     "@angular/platform-browser-dynamic": "2.4.2",
     "@angular/router": "3.4.2",
+    "@types/lodash": "^4.14.50",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.1",
     "zone.js": "^0.7.2"
