--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "@angular/platform-browser": "2.4.2",
     "@angular/platform-browser-dynamic": "2.4.2",
     "@angular/router": "3.4.2",
+    "adal-angular": "^1.0.13",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
+    "jquery-ui-bundle": "^1.11.4",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.1",
     "zone.js": "^0.7.2"
@@ -43,9 +48,10 @@
     "@angularclass/hmr-loader": "^3.0.2",
     "@types/core-js": "^0.9.0",
     "@types/jasmine": "^2.2.29",
+    "@types/jquery": "^2.0.40",
+    "@types/lodash": "4.14.50",
     "@types/node": "^6.0.38",
     "@types/selenium-webdriver": "2.53.33",
-    "@types/lodash": "4.14.50",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^3.0.0-beta.17",
