--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
     "jquery-ui-bundle": "^1.11.4",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "jasmine-core": "^2.5.2"
   },
   "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
     "@angularclass/hmr-loader": "^3.0.2",
     "@types/core-js": "^0.9.0",
-    "@types/jasmine": "^2.2.29",
+    "@types/jasmine": "2.5.41",
     "@types/jquery": "^2.0.40",
     "@types/lodash": "4.14.50",
     "@types/node": "^6.0.38",
@@ -63,7 +64,7 @@
     "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.8.1",
     "istanbul-instrumenter-loader": "^0.2.0",
-    "jasmine-core": "^2.3.4",
+    "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^2.4.0",
     "json-loader": "^0.5.3",
     "karma": "1.3.0",
